13008
Moving a trait into a method and returning a class mixing in that trait
gets this error:
```scala
scala> class Bar
defined class Bar

scala> def f = { trait Foo; new Bar with Foo }
f: $$anon forSome { type $$anon <: Bar with Foo; type Foo <: java.lang.Object with ScalaObject }

scala> f
<console>:5: error: type mismatch;
 found   : $$anon(in object $$iw) where type $$anon(in object $$iw) <: Bar with Foo
 required: $$anon(in value res0) forSome { type $$anon(in value res0) <: Bar with Foo; type Foo <: java.lang.Object with ScalaObject }
  val res0 =
      ^
```
